fdo#52208 DOCX import: don't always ignore cont sect break at the doc end

Regression from commit 1fdd61db155cf63d5dd55cc2bfb45af33796e131,
continuous section break does make sense at the end of the doc, if the
previous type was a non-continuous.

Change-Id: I6d82c67e068d8dc3ce1edb1a5fe6ad293afd805d